--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/public/Logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Nicolas Desprez - Full Stack Web Developer from Massachusetts">
+    <meta name="description" content="Nicolas Desprez - Software Engineer from Massachusetts">
     <title>Nicolas Desprez</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
